--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="gallery">
                         <div class="grid_block">
                             <p class="block_name">Blog</p>
-                            <div class="left-grid-bar">
+                            <div class="left_bar grid">
                                 <p class="description">Get news Feeds</p>
                             </div>
                         </div>
@@ -100,8 +100,21 @@
                     </div>
             </div>
         </section>
-        <section class="contact">
-            contact form
+        <section class="section-form">
+            <div class="container">
+                <p class="block_name_form">Contact Me</p>
+                <div class="high_bar">
+                    <div class="left_bar form">
+                        <p class="description">Let me know if you want to talk 
+                            about a potential collaboration.
+                            I'm available for freelance work.
+                        </p>
+                    </div>
+                    <div class="mail_link">
+                        <a href="russki-misha@mail.ru" class="mail">russki-misha@mail.ru</a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
