--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam Zakob</title>
+    <link rel="stylesheet" href="Fonts/stylesheet.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -37,7 +38,7 @@
             <div class="container">
                 <p class="block_name">Services</p>
                 <div class="left_bar">
-                    <h2 class="description">What actually i love to do</h2>
+                    <h2 class="description">What actually I love to do</h2>
                 </div>
                 <div class="articles">
                     <div class="text1">
@@ -70,7 +71,6 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
                           </svg>
-                        <!-- <img src="images/Arrow-right.svg" alt="arrow"> -->
                     </div>
                 </div>
                 <div class="pictures">
@@ -117,7 +117,7 @@
                 <p class="block_name_form">Contact Me</p>
                 <div class="high_bar">
                     <div class="left_bar form">
-                        <h2 class="description">Let me know if you want to talk 
+                        <h2 class="description des_font">Let me know if you want to talk 
                             about a potential collaboration.
                             I'm available for freelance work.
                         </h2>
@@ -133,7 +133,13 @@
                         <input type="mail" id="mail" placeholder="Your email" required>
                         <br>
                         <input type="text" id="message" placeholder="Tell me about your project" required>
-                        <input class="form-btn" type="submit" value="Get a Quote">
+                        <div class="paper-clip">
+                            <input class="form-btn" type="submit" value="Get a Quote">
+                            <a href="#" class="clip"><img src="images/paperclip.svg" alt="clip"></a>
+                            <a href="#" class="enter-arrow"><svg xmlns="http://www.w3.org/2000/svg" width="20" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                              </svg></a>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -142,9 +148,6 @@
     <footer>
         <div class="container footer">
             <h2>Let's be Friends</h2>
-            <!-- <div class="foot-img"></div>
-            <div class="foot-img"></div>
-            <div class="foot-img"></div> -->
             <div class="contacts">
                 <img src="images/ball icon.png" alt="ball">
                 <img src="images/Instagram icon.png" alt="instagram">
