--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Adam Zakob</title>
     <link rel="stylesheet" href="Fonts/stylesheet.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <header>
         <section class="header menu">
             <div class="container">
                 <div class="menu-wrapper container">
-                    <a href="#" class="logo"><img src="images/Group 31.svg" alt="logo" width="40px"></a>
+                    <a href="#" class="logo"><img src="images/Group31.svg" alt="logo"></a>
                     <ul class="menu_ul">
                         <li class="li_item"><a href="#about">About</a></li>
                         <li class="li_item"><a href="#services">Services</a></li>
@@ -21,6 +22,23 @@
                         <li class="li_item"><a href="#blog">Blog</a></li>
                     </ul>
                 </div>
+                <div class="burger-menu">
+                    <button class="menu__burger burger" type="button">
+                        <span class="burger__line"></span>
+                        <span class="burger__line"></span>
+                        <span class="burger__line"></span>
+                        <span class="burger__line"></span>
+                    </button>
+                    <nav class="main-nav">
+                        <ul class="main-nav__list">
+                            <li class="main-nav__item"><a href="#about" class="main-nav__link">About</a></li>
+                            <li class="main-nav__item"><a href="#services" class="main-nav__link">Services</a></li>
+                            <li class="main-nav__item"><a href="#works" class="main-nav__link">Works</a></li>
+                            <li class="main-nav__item"><a href="#blog" class="main-nav__link">Blog</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                
                 <div class="man" id="about">
                     <div class="words">
                         <p>Hello,</p>
@@ -149,9 +167,9 @@
         <div class="container footer">
             <h2>Let's be Friends</h2>
             <div class="contacts">
-                <img src="images/ball icon.png" alt="ball">
-                <img src="images/Instagram icon.png" alt="instagram">
-                <img src="images/linkedin icon.png" alt="linkedin">    
+                <img src="images/ball_icon.png" alt="ball">
+                <img src="images/Instagram_icon.png" alt="instagram">
+                <img src="images/linkedin_icon.png" alt="linkedin">    
             </div>
         </div>
     </footer>
